# QuantiMORK-THRML

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
quantimork_thrml/: __init__.py  gaussian_ebm.py  haar.py  model.py  pmode_verify.py  thrml_verify.py  wavelet_linear.py
quantimork_thrml/fluid_pc/: __init__.py  advection.py  cross_scale_predictor.py  cycle_basis.py  drift_mpc.py  fluid_pc_block.py  graph.py  leray.py  reaction.py  readout.py  topology.py  tsu_compile.py
scripts/: compare.py  connectivity_analysis.py  prepare_data.py  train.py
tests/: conftest.py  test_baseline_compare.py  test_haar.py  test_model.py  test_thrml_verify.py  test_wavelet_linear.py
tests/test_fluid_pc/: test_advection.py  test_block.py  test_cross_scale_predictor.py  test_cycle_basis.py  test_diagnostics_and_anneal.py  test_drift_mpc.py  test_graph.py  test_leray.py  test_model_integration.py  test_topology.py  test_tsu_compile.py
