[project]
name = "quantimork-thrml"
version = "0.1.0"
description = "QuantiMORK (§7.4) wavelet-sparse predictive coding compiled to thermodynamic factor graphs"
authors = [{name = "Xiaohan Ma"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["predictive coding", "wavelet", "thermodynamic computing", "factor graph", "TSU", "QuantiMORK"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
thrml = [
    "thrml>=0.1.3,<0.3",
    "jax>=0.4,<0.6",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["quantimork_thrml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
